# atlas

./: README.md  demo.sh  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: tester-smoke.md
.github/workflows/: hermes-native.yml  openclaw-native.yml  test.yml
atlas_core/: cli.py  graphiti.py
atlas_core/adapters/: __init__.py  hermes.py  openclaw.py
atlas_core/api/: api_app.py  http_server.py  mcp_server.py
atlas_core/ingestion/: __init__.py  base.py  materializer.py  vault.py
atlas_core/ingestion/extractors/: llm_base.py
atlas_core/migrations/: schema.py
atlas_core/ripple/: __init__.py  episode_adapter.py  resolver.py
atlas_core/trust/: ledger.py  quarantine.py
benchmarks/business_mem_bench/adapters/: atlas_system.py
docs/: INSTALL_MODES.md  LAUNCH_BACKLOG.md  PROPOSAL_VS_MUTATION.md  RUNTIME_ADAPTERS.md
integrations/hermes-atlas/: README.md
integrations/hermes-atlas/atlas/: __init__.py  store.py
integrations/openclaw-atlas/: CHECKSUMS.sha256  README.md  atlas-memory-openclaw-0.1.0.tgz  index.ts
integrations/openclaw-atlas/src/: sqlite-state.ts
integrations/openclaw-atlas/tests/: store.test.ts
scripts/: adjudicate.py  demo_loop.py  demo_runtime_adapters.py
site/: index.html
tests/hermes/: test_native_hermes_plugin.py
tests/integration/: test_adapters.py  test_add_episode_ripple.py  test_adjudicate_cli.py  test_adjudication_resolver.py  test_candidate_materialization.py  test_claude_code_stdio.py  test_cli_integration.py  test_http_server.py  test_mcp_server.py  test_ripple_engine.py  test_runtime_adapter_demo.py  test_schema_constraints.py
tests/unit/: test_api_token.py  test_cli.py  test_depends_on_edge_property.py  test_episode_adapter.py  test_ingestion.py  test_ledger.py  test_llm_extractors.py  test_quarantine.py  test_sdist_allowlist.py  test_sqlite_lifecycle.py  test_vault_roots_env.py
