[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "atlas-core"
version = "0.1.0-alpha.1"
description = "Open-source local-first cognitive memory with AGM-compliant belief revision and automatic downstream reassessment (Ripple)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<4"
authors = [
    { name = "Richard Schefren" },
]
keywords = [
    "cognitive-memory",
    "knowledge-graph",
    "agm",
    "belief-revision",
    "claude-code",
    "mcp",
    "neo4j",
    "agent-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Atlas's "core today is $0/month deterministic" story breaks if
# pip install pulls 2GB of LLM/embedding clients. Default install is
# the bare substrate; opt in to extras as you turn features on.
dependencies = [
    "graphiti-core>=0.28.2",
    "neo4j>=5.26.0",
    "pydantic>=2.0,<3",
    "python-ulid>=2.0",
    "tenacity>=8.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "watchdog>=4.0",
    "rapidfuzz>=3.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# pip install atlas-core[llm]
#   Pulls Anthropic SDK. Required for: LLM-driven extraction
#   (atlas_core.ingestion.extractors), entity-resolution LLM fallback
#   (atlas_core.resolution.llm_fallback), block auto-summarizer
#   (atlas_core.working.auto_summarizer), lineage extractor.
#   Without this, Atlas runs deterministic-only at $0/month.
llm = [
    "anthropic>=0.49.0",
]

# pip install atlas-core[embeddings]
#   Pulls sentence-transformers (~2GB with torch). Required for:
#   semantic retrieval beyond what vault-search provides. Today
#   atlas_core.retrieval delegates to the user's existing
#   vault-search daemon, so this extra is rarely needed.
embeddings = [
    "sentence-transformers>=2.7",
]

# pip install atlas-core[benchmarks]
#   Baseline-system clients for the BusinessMemBench head-to-head
#   matrix. Mem0/Letta need OPENAI_API_KEY at runtime; Memori needs
#   MEMORI_API_KEY.
benchmarks = [
    "mem0ai>=2.0.0",
    "letta",
]

# pip install atlas-core[full]
#   Convenience meta-extra: everything except dev tooling.
full = [
    "anthropic>=0.49.0",
    "sentence-transformers>=2.7",
    "mem0ai>=2.0.0",
    "letta",
]

# pip install atlas-core[dev]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "testcontainers[neo4j]>=4.0",
    # Tests cover the LLM paths via mocked clients; no need to ship
    # the real anthropic SDK for the test suite, but include it so
    # `pip install -e .[dev]` gives contributors the full feature set.
    "anthropic>=0.49.0",
]

# The SDK-neutral Hermes/OpenClaw cores need no extra dependencies.
# Native current-upstream wrappers are not yet distributed from this repo.
adapters = [
    # Reserved for future version-pinned native wrapper packages.
]

[project.urls]
Homepage = "https://github.com/RichSchefren/atlas"
Documentation = "https://github.com/RichSchefren/atlas/tree/main/docs"
Repository = "https://github.com/RichSchefren/atlas"

[tool.hatch.build.targets.wheel]
packages = ["atlas_core"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use `pytest.raises(Exception)` to assert that *any*
# validation error is raised — narrowing the type would couple the test to
# Pydantic internals.
"tests/**/*.py" = ["B017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires running Neo4j",
    "ripple: ripple algorithm tests",
    "adapters: agent-runtime adapter tests",
]
